# nasa-astronomy-picture-of-the-day-mcp-server

./: .gitignore  README.md  deployment_params.json  docker-compose.yml  mcp_health_check.py  pyproject.toml  run_local_docker.sh  server.py
.cursor/: nasa-astronomy-picture-of-the-day-mcp-server-setup-rules.md
